[package]
name = "pwoxy"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.21"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2.4"
hex = "0.4"
aes-gcm = "0.10"
